Fix UI spacing and sizing issues. Things all look good now, just need to fix and polish up the remaining functionality issues with the v3 migration.

--- a/src/assets/css/calendar.css
+++ b/src/assets/css/calendar.css
@@ -15,11 +15,6 @@ body {
     z-index: 1151 !important;
 }
 
-input.calendar-homework-checkbox {
-    width: 10px !important;
-    height: 10px !important;
-}
-
 .page-content {
     padding-bottom: 0;
 }
@@ -147,4 +142,13 @@ input[type=checkbox].ace.ace-switch:checked + .lbl::before {
 
 .fc-list-heading th {
     font-weight: bold;
+}
+
+/* undo what fullcalendar 3 does, as it causes everything to be way bigger */
+.fc-view-container *,
+.fc-view-container *:before,
+.fc-view-container *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
